# QualifyBot

./: .gitignore  Dockerfile  Dockerfile.dev  Makefile  RAILWAY-ENV-VARS.md  RAILWAY-REDIS-SETUP.md  RAILWAY-TROUBLESHOOTING.md  RAILWAY.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
docs/: README.md  architecture.md  user-guide.md
knowledge_base/sample_docs/: email_setup.md  printer_troubleshooting.md  vpn_connection.md  wifi_issues.md
scripts/: init_sample_kb.py  start-cloudflared.ps1  start-cloudflared.sh  test_jira_connection.py  verify-env.ps1  verify-env.sh
src/: __init__.py  main.py
src/agent/: __init__.py  checkpoint.py  company_config.py  models.py  orchestrator.py  state.py
src/agent/graph/: __init__.py  graph.py  nodes.py
src/api/routes/: __init__.py  analytics.py  kb_admin.py  media_stream.py  test_audio.py  twilio.py
src/core/: __init__.py  config.py  logging.py
src/database/: connection.py  migrations.py  migrations_tickets.py  models.py
src/models/: session.py
src/services/: analytics_service.py  audio_converter.py  caller_history_service.py  conversation_logger.py  embedding_service.py  jira_service.py  kb_ingestion.py  kb_retrieval.py  llm_service.py  media_stream_service.py  realtime_stt_service.py  salesforce_service.py  session_manager.py  stt_service.py  ticket_service.py  tts_service.py  twilio_service.py  vector_store.py
